--- a/Kubernetes-Manifests-file/Backend/service.yaml
+++ b/Kubernetes-Manifests-file/Backend/service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: api
   namespace: three-tier
-spec: 
-  ports:
-  - port: 3500
-    protocol: TCP
-  type: ClusterIP
+spec:
   selector:
-    role: api
+    app: api
+  ports:
+    - name: http
+      port: 80
+      targetPort: 5000
+  type: ClusterIP
